<resources>
    <string name="app_name">FunnyPlay</string>

    <!--    欢迎-->
    <string name="splTile">Complete simple tasks and get generous rewards</string>
    <string name="Great">Great</string>
    <string name="splContent1">By continuing, you accept our </string>
    <string name="splContent2">privacy policy</string>
    <!--    首页-->
    <string name="FavoriteGames">Favorite Games</string>
    <string name="TheMostRewarding">The Most Rewarding</string>
    <string name="NewlyLaunched">Newly launched</string>
    <string name="ALL">ALL>></string>
    <string name="Play">Play</string>

    <!--    商店-->
    <string name="Avatar">Avatar</string>
    <string name="AvatarFrame">Avatar Frame</string>
    <string name="Use">Use</string>
    <string name="InUse">In use</string>

    <!--    个人-->
    <string name="RecentlyPlayed">Recently Played</string>
    <string name="FAQ">FAQ</string>
    <string name="GiveUsScore">Give us score</string>
    <string name="PrivacyPolicy">Privacy Policy</string>

    <string name="warning">warning</string>
    <string name="confirm">Confirm spending</string>
    <string name="redeem">to redeem this item</string>
    <string name="cancel">cancel</string>
    <string name="change">comfirm</string>

    <!--    提现记录-->
    <string name="Diamonds">Diamonds</string>

    <!--    签到-->
    <string name="checkIn">—— Check in ——</string>

    <!--    游戏中心-->
    <string name="GameCenter">Game Center</string>
    <string name="GameTitle">Game Title</string>
    <string name="EarningRate">Earning Rate</string>
    <string name="Speed">Speed</string>
    <string name="Obtained">Obtained</string>
    <string name="Rewards">Rewards</string>
    <string name="PlayNow">Play Now</string>

    <!--    我的任务-->
    <string name="Review">Review</string>
    <string name="Completed">Completed</string>
    <string name="lnProgress">ln progress</string>

    <!--    签到-->
    <string name="day1">Day1</string>
    <string name="day2">Day2</string>
    <string name="day3">Day3</string>
    <string name="day4">Day4</string>
    <string name="day5">Day5</string>
    <string name="day6">Day6</string>
    <string name="day7">Day7</string>
    <string name="WatchVideos">Watch videos</string>
    <string name="pleaseWatch">Please click the watch video button.</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="RewardsArrive">Rewards arrive</string>
    <string name="OK">OK</string>

    <string name="error">Failed to retrieve data.</string>
    <string name="getSuccess">Successfully claimed.</string>
    <string name="loginFailed">Login failed, retrying...</string>
    <string name="mission_complete" translatable="false">Mission Complete</string>

    <string name="taskFailed">Collection failed</string>
    <string name="checked">Checked!</string>
    <string name="copySuccess">Copy successful.</string>

    <string name="Game">Game</string>
    <string name="Shop">Shop</string>
    <string name="Me">Me</string>
</resources>