<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_warning_back"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/warning"
        android:textColor="#050505"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirm"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@mipmap/icon_blue_diamond"
        app:layout_constraintBottom_toBottomOf="@+id/textView0"
        app:layout_constraintStart_toEndOf="@+id/textView0"
        app:layout_constraintTop_toTopOf="@+id/textView0" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="34dp"
        android:text="5000"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView0"
        app:layout_constraintStart_toEndOf="@+id/imageView0" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/redeem"
        android:textColor="#050505"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView0"
        app:layout_constraintStart_toEndOf="@+id/tv_money" />

    <TextView
        android:id="@+id/tv_leftBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_warning_cancel"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/cancel"
        android:textColor="#333333"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_rightBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_money" />

    <TextView
        android:id="@+id/tv_rightBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/shape_warning_sure"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/change"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_leftBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_leftBtn"
        app:layout_constraintTop_toBottomOf="@+id/tv_money" />


</androidx.constraintlayout.widget.ConstraintLayout>