<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#221616"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bottom_nav_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_game"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_menu_back"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:textColor="#521E23"
            android:text="@string/Game"
            android:textSize="16sp"
            android:drawableTop="@drawable/sel_game"
            android:paddingTop="23dp" />

        <RadioButton
            android:id="@+id/rb_gift"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_menu_back"
            android:button="@null"
            android:visibility="gone"
            android:gravity="center"
            android:textSize="16sp"
            android:drawableTop="@drawable/sel_gift"
            android:paddingTop="20dp" />

        <RadioButton
            android:id="@+id/rb_shop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_menu_back"
            android:button="@null"
            android:textColor="#7E5358"
            android:gravity="center"
            android:text="@string/Shop"
            android:textSize="16sp"
            android:drawableTop="@drawable/sel_shop"
            android:paddingTop="20dp" />

        <RadioButton
            android:id="@+id/rb_personal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/sel_menu_back"
            android:button="@null"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="#7E5358"
            android:text="@string/Me"
            android:drawableTop="@drawable/sel_personal"
            android:paddingTop="20dp" />
    </RadioGroup>

</LinearLayout>
