<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:background="@drawable/shape_my_game_back"
    android:paddingBottom="10dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="20dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginTop="11dp"
        android:src="@mipmap/icon_blue_diamond"
        app:layout_constraintStart_toStartOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="#FF6B23"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView0"
        app:layout_constraintStart_toEndOf="@+id/imageView0"
        app:layout_constraintTop_toTopOf="@+id/imageView0" />

    <TextView
        android:id="@+id/tv_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="#A5A5A5"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_my_game_progress"
        android:drawableStart="@mipmap/icon_progress"
        android:drawablePadding="7dp"
        android:paddingStart="13dp"
        android:paddingTop="8dp"
        android:paddingEnd="13dp"
        android:paddingBottom="8dp"
        android:visibility="gone"
        android:text="@string/lnProgress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_my_game_complete"
        android:drawableStart="@mipmap/icon_complete"
        android:drawablePadding="7dp"
        android:paddingStart="13dp"
        android:paddingTop="8dp"
        android:paddingEnd="13dp"
        android:visibility="gone"
        android:paddingBottom="8dp"
        android:text="@string/Completed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_my_game_review"
        android:drawableStart="@mipmap/icon_review"
        android:drawablePadding="7dp"
        android:paddingStart="13dp"
        android:visibility="gone"
        android:paddingTop="8dp"
        android:paddingEnd="13dp"
        android:paddingBottom="8dp"
        android:text="@string/Review"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>