<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_logo"
        android:layout_width="82dp"
        android:layout_height="82dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_corner_radius="20dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_logo"
        app:layout_constraintTop_toTopOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textColor="#A5A5A5"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <View
        android:id="@+id/view0"
        android:layout_width="1dp"
        android:layout_height="16dp"
        android:layout_marginStart="18dp"
        android:background="#A5A5A5"
        app:layout_constraintBottom_toBottomOf="@+id/tv_score"
        app:layout_constraintStart_toEndOf="@+id/tv_score"
        app:layout_constraintTop_toTopOf="@+id/tv_score" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:textColor="#A5A5A5"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_score"
        app:layout_constraintStart_toEndOf="@id/view0" />

    <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_game_detail_rate_back"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_game_detail_rate_info_back"
            android:paddingStart="16dp"
            android:paddingTop="9dp"
            android:paddingBottom="9dp"
            android:text="@string/EarningRate"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/textView0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/Speed"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/textView1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView0"
                app:layout_constraintTop_toBottomOf="@+id/textView0" />

            <View
                android:id="@+id/view1"
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/white"
                app:layout_constraintStart_toEndOf="@+id/textView0"
                app:layout_constraintTop_toTopOf="@+id/textView0" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="14dp"
                android:text="@string/Obtained"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/shape_game_detail_rate_back"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout0"
        app:layout_constraintStart_toStartOf="@+id/linearLayout0"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/Rewards"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>